# examplemod

./: CMakeLists.txt  readme.md
sa/: genmain.cc  genmain.h  main.cc
src/: addsub.cc  xyz.cc  xyz.h
tests/: addsub.cc  addsub.h  xyz.cc  xyz.h
